# investors-diary

./: .gitignore  README.md  application.ipynb  pyproject.toml
config/: config.py
data/: investor_diary.db
data/faiss_index/: index.faiss  index.pkl
notebooks/: application.ipynb
src/: __init__.py
src/agents/: analysis_agent.py  base_agent.py  dialogue_manager.py  primary_agent.py  rag_agent.py  research_agent.py  transaction_agent.py
src/app/: client.py  server.py
src/core/: graph_builder.py  research_sub_graph_builder.py
src/database/: db_utils.py  models.py
src/prompts/: prompt_templates.py
src/tools/: analysis_tools.py  primary_assistant_tools.py  rag_tools.py  research_tools.py  transaction_tools.py
src/utils/: common_utils.py  rag_utils.py
